Polimer entities & model form redesign (#72)
